# hpc_gateway/model.py
@@ -1,0 +1,20 @@
+"""This module serve as the model of the HPC gateway to interafcing for the
+users and jobs collection of the DB."""
+
+import bson
+
+from flask import current_app, g
+from werkzeug.local import LocalProxy
+from flask_pymongo import PyMongo
+from pymongo.errors import DuplicateKeyError, OperationFailure
+from bson.objectid import ObjectId
+from bson.errors import InvalidId
+
+def get_db():
+    """Configuration method to return db instance.
+    """
+    db = getattr(g, "_database", None)
+    if db is None:
+        db = g._database = PyMongo(current_app).db
+        
+    return db
